--- a/Ass_2/FrontEnd/package.json
+++ b/Ass_2/FrontEnd/package.json
@@ -16,13 +16,16 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-constants": "^13.0.2",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.1.3",
+    "react-native-maps": "^0.30.1",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
