implemented react carousel view ( not that smooth with fast swipe

--- a/Ass_2/FrontEnd/package.json
+++ b/Ass_2/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-constants": "^13.0.2",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.1",
     "react-navigation-drawer": "^2.7.2",
     "styled-components": "^5.3.3",
